k8s/deployment-stable.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scorebank-stable
  labels:
    app: scorebank
    version: stable
spec:
  replicas: 4        # 80% del tráfico — 4 de 5 pods
  selector:
    matchLabels:
      app: scorebank
      version: stable
  template:
    metadata:
      labels:
        app: scorebank
        version: stable
    spec:
      containers:
        - name: scorebank-api
          image: scorebankregistry.azurecr.io/scorebank-api:stable
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
