k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scorebank-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scorebank-api
  template:
    metadata:
      labels:
        app: scorebank-api
    spec:
      serviceAccountName: scorebank-sa
      containers:
        - name: scorebank-api
          image: us-central1-docker.pkg.dev/api-devops-493100/scorebank-repo/scorebank-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
              ephemeral-storage: 100Mi
            limits:
              cpu: 500m
              memory: 512Mi

        - name: cloud-sql-proxy
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.8.0
          args:
            - "--structured-logs"
            - "--port=5432"
            - "--credentials-file=/secrets/key.json"
            - "api-devops-493100:us-central1:score-bank"
          volumeMounts:
            - name: gcp-key
              mountPath: /secrets
              readOnly: true
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
              ephemeral-storage: 50Mi
            limits:
              cpu: 200m
              memory: 256Mi
          securityContext:
            runAsNonRoot: true

      volumes:
        - name: gcp-key
          secret:
            secretName: scorebank-gcp-key
